# BullsNova

./: Dockerfile  README.md  application.py  finances.db  helpers.py  pyproject.toml  requirements.txt
